# FHECourse

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Dockerfile  INSTALL.txt  Makefile  README.md
SEAL/: CMakeLists.txt  SEAL.vcxproj  SEAL.vcxproj.filters
SEAL/cmake/: SEALConfig.cmake  SEALConfig.cmake.in
SEAL/seal/: CMakeLists.txt  batchencoder.cpp  batchencoder.h  bigpoly.cpp  bigpoly.h  bigpolyarray.cpp  bigpolyarray.h  biguint.cpp  biguint.h  ciphertext.cpp  ciphertext.h  ckks.cpp  ckks.h  context.cpp  context.h  decryptor.cpp  decryptor.h  defaultparams.h  encoder.cpp  encoder.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  galoiskeys.cpp  galoiskeys.h  intarray.h  keygenerator.cpp  keygenerator.h  memorymanager.cpp  memorymanager.h  plaintext.cpp  plaintext.h  publickey.h  randomgen.cpp  randomgen.h  relinkeys.cpp  relinkeys.h  (+6 more)
SEALExamples/: CMakeLists.txt  SEALExamples.vcxproj
SEALTest/: SEALTest.vcxproj  SEALTest.vcxproj.filters  batchencoder.cpp  bigpoly.cpp  bigpolyarray.cpp  biguint.cpp  ciphertext.cpp  ckks.cpp  context.cpp  encoder.cpp  encryptionparams.cpp  encryptor.cpp  evaluationkeys.cpp  evaluator.cpp  galoiskeys.cpp  intarray.cpp  keygenerator.cpp  memorymanager.cpp  plaintext.cpp  publickey.cpp  randomgen.cpp  secretkey.cpp  smallmodulus.cpp
SEALTest/util/: clipnormal.cpp  common.cpp  hash.cpp  mempool.cpp  modulus.cpp  ntt.cpp  polyarith.cpp  polyarithmod.cpp  polyarithsmallmod.cpp  polycore.cpp  polyfftmultmod.cpp  polyfftmultsmallmod.cpp  randomtostd.cpp  smallntt.cpp  uintarith.cpp  uintarithmod.cpp  uintcore.cpp  (+1 more)
src/: CMakeLists.txt  Context.cpp  Context.h  ContextBuilder.cpp  ContextBuilder.h  CtxtExt.cpp  CtxtExt.h  UserParams.cpp  UserParams.h  doron.cpp  exevaluator.cpp  exevaluator.h  main.cpp  utils.cpp  utils.h
(+51 files in other folders)
